<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp3"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/TextWeightGoal"
        android:layout_width="188dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="77dp"
        android:text="@string/weightgoaltext"
        app:layout_constraintBottom_toTopOf="@+id/TextHowMuch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/SelectWeightGoal"
        android:layout_width="157dp"
        android:layout_height="0dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="53dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/Objective"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476"
        tools:ignore="SpeakableTextPresentCheck" />




    <TextView
        android:id="@+id/TextHowMuch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="506dp"
        android:text="@string/howmuchtext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Objective"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextWeightGoal" />

    <Spinner
        android:id="@+id/Objective"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="470dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TextHowMuch"
        app:layout_constraintTop_toBottomOf="@+id/SelectWeightGoal"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/toSignUp4From3"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="296dp"
        android:text="@string/next"
        android:background="@drawable/login_btns"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/toSignUp2From3"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginBottom="296dp"
        android:background="@drawable/login_btns"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/toSignUp4From3"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>