<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Report"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/reportdate"
        android:layout_width="161dp"
        android:layout_height="53dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textAverageCal"
        android:layout_width="190dp"
        android:layout_height="170dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="196dp"
        android:text="@string/average_cal_intake"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/average_cal_intake" />

    <TextView
        android:id="@+id/textMaxCal"
        android:layout_width="174dp"
        android:layout_height="93dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="16dp"
        android:text="@string/max_cal_intake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/max_cal_intake" />

    <TextView
        android:id="@+id/textMinCal"
        android:layout_width="174dp"
        android:layout_height="78dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="12dp"
        android:text="@string/min_cal_intake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/min_cal_intake" />

    <TextView
        android:id="@+id/editTextMinCal"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="364dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/textMinCal"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textRecommendations"
        android:layout_width="285dp"
        android:layout_height="156dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="84dp"
        android:text="Tips for next month:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Tips for next month:" />

    <Button
        android:id="@+id/reportHistorybtn"
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="628dp"
        android:text="@string/report_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextmonthbtn"
        android:layout_width="157dp"
        android:layout_height="83dp"
        android:layout_marginTop="628dp"
        android:layout_marginEnd="36dp"
        android:text="@string/set_next_month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextAverageCal"
        android:layout_width="136dp"
        android:layout_height="83dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="376dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/editTextMaxCal"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/editTextRecommendations"
        android:layout_width="285dp"
        android:layout_height="90dp"
        android:layout_marginTop="504dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>